--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
     <title>Xiaobao Wang's Homepage</title>
-    <meta name="description" content="Xiaobao Wang&#39;s Homepage" />
-    <meta name="keywords" content="Xiaobao Wang" />
+    <meta name="description" content="Zhizhi Yu&#39;s Homepage" />
+    <meta name="keywords" content="Zhizhi Yu" />
     <meta name="robots" content="index,follow" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
