--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-    <title>Xiaobao Wang's Homepage</title>
+    <title>Zhizhi Yu's Homepage</title>
     <meta name="description" content="Zhizhi Yu&#39;s Homepage" />
     <meta name="keywords" content="Zhizhi Yu" />
     <meta name="robots" content="index,follow" />
@@ -116,7 +116,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">Xiaobao Wang</a>
+          <a class="brand" href="#">Zhizhi Yu</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li><a href="#about-me" class="scroller">About me</a></li>
@@ -182,7 +182,7 @@
               </div>
               <div class="span6">
                 <br /><br /><br /><br />
-                <h1>Xiaobao Wang 王晓宝</h1>
+                <h1>Zhizhi Yu 于智郅</h1>
                 <br />
                 <h2 class="primary-color">Ph.D &amp; Assistant Professor</h2>
               </div>
@@ -190,7 +190,7 @@
 
             <div class="well">
               <p class="lead">
-                <b>Xiaobao Wang (王晓宝)</b> is currently an assistant professor
+                <b>Zhizhi Yu (于智郅)</b> is currently an assistant professor
                 in
                 <a target="_blank" href="http://www.tju.edu.cn"
                   >Tianjin University (TJU)</a
