--- a/index.html
+++ b/index.html
@@ -194,21 +194,14 @@
                 in
                 <a target="_blank" href="http://www.tju.edu.cn"
                   >Tianjin University (TJU)</a
-                >, China. He received BA, ME, and Ph.D degree from Tianjin
-                University. His supervisors were Prof.
-                <a
-                  target="_blank"
-                  href="https://scholar.google.com/citations?user=Wk5ApskAAAAJ&hl=zh-CN&oi=ao"
-                  >Jianwu Dang (党建武)</a
-                >
-                and Prof.
-                <a
-                  target="_blank"
+                >, China. She received BA, ME degree from Jilin University, and Ph.D degree from Tianjin
+                University. Her supervisors were Prof.
+                <a target="_blank"
                   href="http://cic.tju.edu.cn/faculty/jindi/index.htm"
                   >Di Jin (金弟)</a
-                >. His research interests include graph neural networks, complex
+                >. Her research interests include graph neural networks, complex
                 network analysis, social network analysis, intent understanding,
-                and rumor detection. He has published many papers in highly
+                and rumor detection. She has published many papers in highly
                 regarded journals and conferences, such as AAAI, WWW, IJCAI,
                 IEEE TKDE, etc. <br /><br />
                 <span style="color: red"
