--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           <div class="section first-section" id="about-me">
             <div class="row author">
               <div class="span3">
-                <img class="img-rounded" src="./img/wxb.jpeg" alt="" />
+                <img class="img-rounded" src="./img/yuzz.jpeg" alt="" />
               </div>
               <div class="span6">
                 <br /><br /><br /><br />
