--- a/index.html
+++ b/index.html
@@ -195,21 +195,19 @@
                 <a target="_blank" href="http://www.tju.edu.cn"
                   >Tianjin University (TJU)</a
                 >, China. She received BA, ME degree from Jilin University, and Ph.D degree from Tianjin
-                University. Her supervisors were Prof.
+                University. Her supervisor was Prof.
                 <a target="_blank"
                   href="http://cic.tju.edu.cn/faculty/jindi/index.htm"
                   >Di Jin (金弟)</a
-                >. Her research interests include graph neural networks, complex
-                network analysis, social network analysis, intent understanding,
-                and rumor detection. She has published many papers in highly
-                regarded journals and conferences, such as AAAI, WWW, IJCAI,
-                IEEE TKDE, etc. <br /><br />
-                <span style="color: red"
+                >. Her research interests include graph machine learning, graph neural networks, complex
+                network analysis, e-commerce search and recommendation system. She has published many papers in highly
+                regarded journals and conferences, such as NeurIPS, WWW, ICDM,
+                IEEE TNNLS, IEEE TKDE, etc. <br /><br />
+<!--                 <span style="color: red"
                   >Call for graduate and undergraduate students! I hope you are
                   dedicated, determined and have basic programming and math
                   skills. I also hope you can enjoy learning and life. Please
-                  feel free to contact me via email.</span
-                >
+                  feel free to contact me via email.</span> -->
               </p>
             </div>
           </div>
