--- a/index.html
+++ b/index.html
@@ -202,7 +202,8 @@
                 >. Her research interests include graph machine learning, graph neural networks, complex
                 network analysis, e-commerce search and recommendation system. She has published many papers in highly
                 regarded journals and conferences, such as NeurIPS, WWW, ICDM,
-                IEEE TNNLS, IEEE TKDE, etc. <br /><br />
+                IEEE TNNLS, IEEE TKDE, etc.
+<!-- 		      <br /><br /> -->
 <!--                 <span style="color: red"
                   >Call for graduate and undergraduate students! I hope you are
                   dedicated, determined and have basic programming and math
