--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
             <div class="timeline">
               <div class="timeline-item">
-                <div class="timeline-item-date">2022 - now</div>
+                <div class="timeline-item-date">2023 - now</div>
                 <div class="timeline-item-trigger">
                   <span
                     class="glyphicons white circle_minus"
@@ -241,7 +241,7 @@
                     data-toggle="collapse"
                     data-target="#position1"
                   >
-                    Associate Professor @ Tianjin University
+                    Assistant Professor @ Tianjin University
                   </h5>
                   <div class="collapse in" id="position1"></div>
                 </div>
@@ -266,7 +266,7 @@
 
             <div class="timeline">
               <div class="timeline-item">
-                <div class="timeline-item-date">2017 - 2022</div>
+                <div class="timeline-item-date">2019 - 2023</div>
                 <div class="timeline-item-trigger">
                   <span
                     class="glyphicons white circle_minus"
@@ -292,7 +292,7 @@
               <span class="clear"></span>
 
               <div class="timeline-item">
-                <div class="timeline-item-date">2015 - 2017</div>
+                <div class="timeline-item-date">2016 - 2019</div>
                 <div class="timeline-item-trigger">
                   <span
                     class="glyphicons white circle_plus"
@@ -308,7 +308,7 @@
                     data-toggle="collapse"
                     data-target="#education2"
                   >
-                    MS in College of Intelligence and Computing, Tianjin
+                    MS in College of Computer Science and Technology, Jilin
                     University, China
                   </h5>
                   <div class="collapse" id="education2"></div>
@@ -318,7 +318,7 @@
               <span class="clear"></span>
 
               <div class="timeline-item">
-                <div class="timeline-item-date">2011 - 2015</div>
+                <div class="timeline-item-date">2012 - 2016</div>
                 <div class="timeline-item-trigger">
                   <span
                     class="glyphicons white circle_plus"
@@ -334,7 +334,7 @@
                     data-toggle="collapse"
                     data-target="#education3"
                   >
-                    BS in College of Intelligence and Computing, Tianjin
+                    BS in College of Computer Science and Technology, Jilin
                     University, China
                   </h5>
                   <div class="collapse" id="education3"></div>
@@ -359,29 +359,20 @@
             <div class="testimonial">
               <blockquote>
                 <p>
-                  2021 Global Top 100 Chinese Rising Stars in Artificial
-                  Intelligence
-                </p>
-              </blockquote>
-            </div>
-            <div class="testimonial">
-              <blockquote>
-                <p>
-                  The 10th China National Conference on Social Media Processing
-                  (SMP), best paper award, 2022
+                  IEEE International Conference on Data Mining 2021, best student paper award runner-up, 2021
                 </p>
               </blockquote>
             </div>
 
             <div class="testimonial">
               <blockquote>
-                <p>Excellent PhD graduate of Tianjin University, 2022</p>
+                <p>Excellent PhD graduate of Tianjin University, 2023</p>
               </blockquote>
             </div>
 
             <div class="testimonial">
               <blockquote>
-                <p>Excellent PhD Thesis of Tianjin University, 2022</p>
+                <p>Excellent PhD Thesis of Tianjin University, 2023</p>
               </blockquote>
             </div>
           </div>
@@ -392,13 +383,16 @@
                 href="#phone-navbar"
                 class="top visible-phone"
                 ><span class="glyphicons white up_arrow"><i></i></span></a
-              >&nbsp;&nbsp;<a
+              >&nbsp;&nbsp;
+<!-- 		    <a
                 target="_blank"
                 href="https://scholar.google.com/citations?user=fMAvbmYAAAAJ"
                 >[Google Scholar]</a
-              >&nbsp;&nbsp;&nbsp;<a
+              >
+		    &nbsp;&nbsp;&nbsp; -->
+		    <a
                 target="_blank"
-                href="https://dblp.uni-trier.de/pid/122/4465.html"
+                href="https://dblp.org/pid/228/2618.html"
                 >[DBLP]</a
               >
             </h2>
