--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
                 <div class="row">
                   <div class="span2 muted">Address</div>
                   <div class="span7">
-                    Room 312, Building 55B<br />
+                    Room A303, Building 55B<br />
                     Peiyang Park Campus, Tianjin University<br />
                     No.135, Yaguan Road, Tianjin Haihe Education Park<br />
                     Tianjin, China, 300350
@@ -690,15 +690,15 @@
               <div class="infoline span9">
                 <div class="row">
                   <div class="span2 muted">Email</div>
-                  <div class="span7">wangxiaobao@tju.edu.cn</div>
+                  <div class="span7">yuzhizhi@tju.edu.cn</div>
                 </div>
               </div>
               <span class="clear"></span>
 
-              <div class="infoline span9">
+<!--               <div class="infoline span9">
                 <div class="row">
                   <div class="span2 muted">Phone</div>
-                  <div class="span7">(86) 131-3221-7073 <br /></div>
+                  <div class="span7">(86) 188-4419-6077 <br /></div> -->
                 </div>
               </div>
               <span class="clear"></span>
