--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
             <div class="testimonial">
               <blockquote>
                 <p>
-                  IEEE International Conference on Data Mining 2021, best student paper award runner-up, 2021
+                  IEEE International Conference on Data Mining 2021, Best Student Paper Award Runner-Up, 2021
                 </p>
               </blockquote>
             </div>
@@ -708,7 +708,7 @@
           </div>
           <!--/section-->
 
-          <div class="section" id="group">
+<!--           <div class="section" id="group">
             <h2 class="section-title">
               <span class="glyphicons group"><i></i></span>Group<a
                 href="#phone-navbar"
@@ -789,7 +789,7 @@
             </div>
           </div>
           <!--/section-->
-        </div>
+        </div> -->
         <!--/span9-->
         <!-- END OF THE MAIN CONTENT -->
 
