--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
       </div>
       <!--/row-->
 
-      <div id="footer">© 2023 Xiaobao Wang</div>
+      <div id="footer">© 2023 Zhizhi Yu</div>
     </div>
     <!--/.container-->
   </body>
