--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
               <li><a href="#publications" class="scroller">Publications</a></li>
               <!-- <li><a href="#teaching" class="scroller">Teaching</a></li> -->
               <li><a href="#contact" class="scroller">Contact</a></li>
-              <li><a href="#group" class="scroller">Group</a></li>
+<!--               <li><a href="#group" class="scroller">Group</a></li> -->
             </ul>
           </div>
           <!--/.nav-collapse -->
