--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               <li><a href="#publications" class="scroller">Publications</a></li>
               <!-- <li><a href="#teaching" class="scroller">Teaching</a></li> -->
               <li><a href="#contact" class="scroller">Contact</a></li>
-              <li><a href="#group" class="scroller">Group</a></li>
+<!--               <li><a href="#group" class="scroller">Group</a></li> -->
             </ul>
           </div>
           <!--/sidebar-nav -->
@@ -400,11 +400,9 @@
             <div class="testimonial">
               <blockquote>
                 <p>
-                  Yuhang Li, Xiao Wei, Yuke Si*, Longbiao Wang,
-                  <b>Xiaobao Wang*</b>, Jianwu Dang. "Improving Zero-shot
-                  Cross-domain Slot Filling via Transformer-based Slot Semantics
-                  Fusion".
-                  <i>INTERSPEECH-2023. (CCF-C类会议长文)</i>
+		  <b>\textbf{Zhizhi Yu*</b>, Di Jin, Ziyang Liu, Dongxiao He, Xiao Wang, Hanghang Tong, Jiawei Han. 
+			"AS-GCN: Adaptive semantic architecture of graph convolutional networks for text-rich networks".           
+                  <i>ICDM-201. (CCF B类会议长文，最佳学生论文奖Runner-Up)</i>
                 </p>
               </blockquote>
             </div>
