--- a/index.html
+++ b/index.html
@@ -410,10 +410,9 @@
             <div class="testimonial">
               <blockquote>
                 <p>
-                  Zhe Yu, Di Jin, <b>Xiaobao Wang*</b>, Yawen Li, Longbiao Wang,
-                  Jianwu Dang. "Commonsense Knowledge Enhanced Sentiment
-                  Dependency Graph for Sarcasm Detection".
-                  <i>IJCAI-2023. (CCF-A类会议长文)</i>
+	          <b>\textbf{Zhizhi Yu*</b>, Di Jin, Jianguo Wei, Yawen Li, Ziyang Liu, Yue Shang, Jiawei Han, Lingfei Wu. 
+			"TeKo: Text-rich graph neural network with external knowledge".
+			<i>IEEE Transactions on Neural Networks and Learning Systems (TNNLS), 2023. (JCR 一区期刊，IF. 14.255)</i>
                 </p>
               </blockquote>
             </div>
