--- a/index.html
+++ b/index.html
@@ -400,9 +400,9 @@
             <div class="testimonial">
               <blockquote>
                 <p>
-		  <b>\textbf{Zhizhi Yu*</b>, Di Jin, Ziyang Liu, Dongxiao He, Xiao Wang, Hanghang Tong, Jiawei Han. 
+		  <b>Zhizhi Yu</b>, Di Jin, Ziyang Liu, Dongxiao He, Xiao Wang, Hanghang Tong, Jiawei Han. 
 			"AS-GCN: Adaptive semantic architecture of graph convolutional networks for text-rich networks".           
-                  <i>ICDM-201. (CCF B类会议长文，最佳学生论文奖Runner-Up)</i>
+                  <i>ICDM-2021. (CCF B类会议长文，最佳学生论文奖Runner-Up)</i>
                 </p>
               </blockquote>
             </div>
