--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
             <div class="testimonial">
               <blockquote>
                 <p>
-	          <b>\textbf{Zhizhi Yu*</b>, Di Jin, Jianguo Wei, Yawen Li, Ziyang Liu, Yue Shang, Jiawei Han, Lingfei Wu. 
+	          <b>Zhizhi Yu</b>, Di Jin, Jianguo Wei, Yawen Li, Ziyang Liu, Yue Shang, Jiawei Han, Lingfei Wu. 
 			"TeKo: Text-rich graph neural network with external knowledge".
 			<i>IEEE Transactions on Neural Networks and Learning Systems (TNNLS), 2023. (JCR 一区期刊，IF. 14.255)</i>
                 </p>
@@ -420,10 +420,9 @@
             <div class="testimonial">
               <blockquote>
                 <p>
-                  Yiqi Dong, Di Jin, <b>Xiaobao Wang*</b>, Yawen Li, Xiaowen Su,
-                  Dongxiao He. "A Generalized Deep Markov Random Fields
-                  Framework for Fake News Detection".
-                  <i>IJCAI-2023. (CCF-A类会议长文)</i>
+		  <b>Zhizhi Yu</b>, Di Jin, Cuiying Huo, Zhiqiang Wang, Xiulong Liu, Heng Qi, Jia Wu, Lingfei Wu.
+"KGTrust: Evaluating trustworthiness of SIoT via knowledge enhanced graph neural networks". 
+			<i>WWW-2023. (CCF A类会议长文）<i>
                 </p>
               </blockquote>
             </div>
@@ -431,10 +430,9 @@
             <div class="testimonial">
               <blockquote>
                 <p>
-                  <b>Xiaobao Wang</b>, Yiqi Dong, Di Jin, Yawen Li, Longbiao
-                  Wang, Jianwu Dang. "Augmenting Affective Dependency Graph via
-                  Iterative Incongruity Graph Learning for Sarcasm Detection".
-                  <i>AAAI-2023. (CCF-A类会议长文，Oral)</i>
+		  Di Jin, <b>Zhizhi Yu</b>, Pengfei Jiao, Shirui Pan, Dongxiao He, Jia Wu, Philip S. Yu, Weixiong Zhang.
+"A survey of community detection approaches: From statistical modeling to deep learning". 
+			<i>IEEE Transactions on Knowledge and Data Engineering, 2023.（CCF A类期刊）<i>	
                 </p>
               </blockquote>
             </div>
