--- a/index.html
+++ b/index.html
@@ -440,10 +440,9 @@
             <div class="testimonial">
               <blockquote>
                 <p>
-                  Di Jin, Bingdao Feng, Siqi Guo, <b>Xiaobao Wang*</b>, Jianguo
-                  Wei, Zhen Wang. "Local-Global Defense Against Unsupervised
-                  Adversarial Attacks on Graphs".
-                  <i>AAAI-2023. (CCF-A类会议长文，Oral)</i>
+		Di Jin, <b>Zhizhi Yu</b>, Dongxiao He, Carl Yang, Philip S. Yu, Jiawei Han. 
+		"GCN for HIN via implicit utilization of attention and meta-paths". 
+		<i>IEEE Transactions on Knowledge and Data Engineering, 2023.（CCF A类期刊）<i>
                 </p>
               </blockquote>
             </div>
@@ -451,11 +450,9 @@
             <div class="testimonial">
               <blockquote>
                 <p>
-                  Haoyu Lu, Nan Li*, Tongtong Song, Longbiao Wang, Jianwu Dang,
-                  <b>Xiaobao Wang*</b>, Shiliang Zhang. "Speech and Noise
-                  Dual-stream Spectrogram Refine Network with Speech Distortion
-                  Loss for Robust Speech Recognition".
-                  <i>ICASSP-2023. (CCF-B类会议)</i>
+		Di Jin, <b>Zhizhi Yu</b>, Cuiying Huo, Rui Wang, Xiao Wang, Dongxiao He, Jiawei Han. 
+		"Universal graph convolutional networks". 
+		</i>NeurIPS-2021.（CCF A类会议长文）</i>
                 </p>
               </blockquote>
             </div>
