--- a/index.html
+++ b/index.html
@@ -427,11 +427,11 @@
               </blockquote>
             </div>
 
-            <div class="testimonial">
+	<div class="testimonial">
               <blockquote>
                 <p>
 		  Di Jin, <b>Zhizhi Yu</b>, Pengfei Jiao, Shirui Pan, Dongxiao He, Jia Wu, Philip S. Yu, Weixiong Zhang.
-"A survey of community detection approaches: From statistical modeling to deep learning". 
+                  "A survey of community detection approaches: From statistical modeling to deep learning". 
 			<i>IEEE Transactions on Knowledge and Data Engineering, 2023.（CCF A类期刊）<i>	
                 </p>
               </blockquote>
@@ -456,28 +456,9 @@
                 </p>
               </blockquote>
             </div>
+		
 
-            <div class="testimonial">
-              <blockquote>
-                <p>
-                  Yanli Wu, Dongxiao He, <b>Xiaobao Wang*</b>, Shuwei Liu and Di
-                  Jin. "刻画多种潜在关系的泊松-伽马主题模型".
-                  <i>CCDM-22</i>
-                </p>
-              </blockquote>
-            </div>
-
-            <div class="testimonial">
-              <blockquote>
-                <p>
-                  Dongxiao He, Rui Guo, <b>Xiaobao Wang*</b>, Di Jin, Yuxiao
-                  Huang, Wenjun Wang. "Inflation improves graph neural
-                  networks". <i>WWW-22. (CCF-A类会议长文)</i>
-                </p>
-              </blockquote>
-            </div>
-
-            <div class="testimonial">
+<!--             <div class="testimonial">
               <blockquote>
                 <p>
                   Jiaxu He, Cheng Gong, Longbiao Wang, Di Jin,
@@ -491,153 +472,10 @@
                   &nbsp;&nbsp;
                 </small>
               </blockquote>
-            </div>
+            </div> -->
 
-            <div class="testimonial">
-              <blockquote>
-                <p>
-                  Dongxiao He, Yanli Wu, Youyou Wang, Zhizhi Yu, Zhiyong Feng,
-                  <b>Xiaobao Wang*</b>, Yuxiao Huang. "Identification of
-                  communities with multi-semantics via Bayesian generative
-                  model".
-                  <i
-                    >IEEE Transactions on Big Data, 2021. (SCI二区, IF.
-                    3.344)</i
-                  >
-                </p>
-                <small>
-                  <a target="_blank" href="./paper/ieee2021-1.pdf">PDF</a>
-                  &nbsp;&nbsp;
-                </small>
-              </blockquote>
-            </div>
+ 
 
-            <div class="testimonial">
-              <blockquote>
-                <p>
-                  Di Jin, <b>Xiaobao Wang*</b>, Dongxiao He, Jianwu Dang,
-                  Weixiong Zhang. "Robust detection of link communities with
-                  summary description in social networks".
-                  <i
-                    >IEEE Transactions on Knowledge and Data Engineering, 2021.
-                    (CCF-A类期刊)</i
-                  >
-                </p>
-                <small>
-                  <a target="_blank" href="./paper/ieee2019.pdf">PDF</a>
-                  &nbsp;&nbsp;
-                </small>
-              </blockquote>
-            </div>
-
-            <div class="testimonial">
-              <blockquote>
-                <p>
-                  Dongxiao He, Huixin Liu, Zhiyong Feng,
-                  <b>Xiaobao Wang*</b>, Di Jin, Wenze Song and Yuxiao Huang. "A
-                  Joint Community Detection Model: Integrating Directed and
-                  Undirected Probabilistic Graphical Models via Factor Graph
-                  with Attention Mechanism".
-                  <i
-                    >IEEE Transactions on Big Data, 2021. (SCI二区, IF. 3.344,
-                    第十届全国社会媒体处理大会(SMP 2022)最佳论文奖)</i
-                  >
-                </p>
-                <small>
-                  <a target="_blank" href="./paper/ieee2021-2.pdf">PDF</a>
-                  &nbsp;&nbsp;
-                </small>
-              </blockquote>
-            </div>
-
-            <div class="testimonial">
-              <blockquote>
-                <p>
-                  Di Jin, <b>Xiaobao Wang</b>, Mengquan Liu, Jianguo Wei,
-                  Wenhuan Lu, Francoise Fogelman-Soulié. "Identification of
-                  generalized semantic communities in large social networks".
-                  <i
-                    >IEEE Transactionson Network Scienceand Engineering, 2020.
-                    (SCI二区IF.5.213)</i
-                  >
-                </p>
-                <small>
-                  <a target="_blank" href="./paper/ieee2020.pdf">PDF</a>
-                  &nbsp;&nbsp;
-                </small>
-              </blockquote>
-            </div>
-
-            <div class="testimonial">
-              <blockquote>
-                <p>
-                  <b>Xiaobao Wang</b>, Di Jin, Katarzyna Musial, Jianwu Dang.
-                  "Topic Enhanced Sentiment Spreading Model in Social Networks
-                  Considering User Interest".
-                  <i>AAAI-2020. (CCF-A类会议长文，Oral)</i>
-                </p>
-                <small>
-                  <a target="_blank" href="./paper/aaai2020.pdf">PDF</a>
-                  &nbsp;&nbsp;
-                </small>
-              </blockquote>
-            </div>
-
-            <div class="testimonial">
-              <blockquote>
-                <p>
-                  <b>Xiaobao Wang</b>, Di Jin, Mengquan Liu, Dongxiao He,
-                  Katarzyna Musial, Jianwu Dang. "Emotional contagion-based
-                  social sentiment mining in social networks by introducing
-                  network communities". <i>CIKM-2019. (CCF-B类会议长文)</i>
-                </p>
-              </blockquote>
-            </div>
-
-            <div class="testimonial">
-              <blockquote>
-                <p>
-                  Di Jin, <b>Xiaobao Wang</b>, Ruifang He, Dongxiao He, Jianwu
-                  Dang, Weixiong Zhang. "Robust detection of link communities in
-                  large social networks by exploiting link semantics".
-                  <i>AAAI-2018. (CCF-A类会议长文, Oral)</i>
-                </p>
-                <small>
-                  <a target="_blank" href="./paper/aaai2018.pdf">PDF</a>
-                  &nbsp;&nbsp;
-                </small>
-              </blockquote>
-            </div>
-
-            <div class="testimonial">
-              <blockquote>
-                <p>
-                  Di Jin, <b>Xiaobao Wang</b>, Dongxiao He, Wenhuan Lu,
-                  Francoise Fogelman-Soulié, Jianwu Dang. "Identification of
-                  generalized communities with semantics in networks with
-                  content". <i>ICTAI-2017. (CCF-C类会议)</i>
-                </p>
-                <small>
-                  <a target="_blank" href="./paper/ictai2017.pdf">PDF</a>
-                  &nbsp;&nbsp;
-                </small>
-              </blockquote>
-            </div>
-
-            <div class="testimonial">
-              <blockquote>
-                <p>
-                  Dongxiao He, Zhiyong Feng, Di Jin, <b>Xiaobao Wang</b>,
-                  Weixiong Zhang. "Joint identification of network communities
-                  and semantics via integrative modeling of network topologies
-                  and node contents". <i>AAAI-2017. (CCF-A类会议长文，Oral)</i>
-                </p>
-                <small>
-                  <a target="_blank" href="./paper/aaai2017.pdf">PDF</a>
-                  &nbsp;&nbsp;
-                </small>
-              </blockquote>
-            </div>
           </div>
           <!--/section-->
 
