--- a/index.html
+++ b/index.html
@@ -456,7 +456,46 @@
                 </p>
               </blockquote>
             </div>
-		
+
+	  <div class="testimonial">
+              <blockquote>
+                <p>
+		 <b>Zhizhi Yu</b>, Di Jin, Ziyang Liu, Dongxiao He, Xiao Wang, Hanghang Tong, Jiawei Han. 
+			"Embedding text-rich graph neural networks with sequence and topical semantic structures". 
+			</i>Knowledge and Information Systems, 2023.（CCF B类期刊）</i>
+                </p>
+              </blockquote>
+            </div>
+
+	 <div class="testimonial">
+              <blockquote>
+                <p>
+			Di Jin, Xiangchen Song, <b>Zhizhi Yu</b>, Ziyang Liu, Heling Zhang, Zhaomeng Cheng, Jiawei Han. 
+			"BiTe-GCN: A new GCN architecture via bidirectional convolution of topology and features on text-rich networks". 
+			</i>WSDM-2021.（CCF B类会议长文）</i>
+                </p>
+              </blockquote>
+            </div>
+
+	 <div class="testimonial">
+              <blockquote>
+                <p>
+			Di Jin, Yingli Gong, Zhiqiang Wang, <b>Zhizhi Yu</b>, Dongxiao He, Yuxiao Huang, Wenjun Wang. 
+			"Graph neural network for higher-order dependency networks". 
+			</i>WWW-2022.（CCF A类会议长文）</i>
+                </p>
+              </blockquote>
+            </div>
+
+	 <div class="testimonial">
+              <blockquote>
+                <p>
+		Dongxiao He, Yanli Wu, Youyou Wang, <b>Zhizhi Yu</b>, Zhiyong Feng, Xiaobao Wang, Yuxiao Huang.
+"Identification of communities with multi-semantics via bayesian generative model".
+			</i>IEEE Transactions on Big Data, 2022.（SCI 二区期刊，IF. 4.271）</i>
+                </p>
+              </blockquote>
+            </div>
 
 <!--             <div class="testimonial">
               <blockquote>
