--- a/index.html
+++ b/index.html
@@ -473,7 +473,8 @@
                 <p>
 		  <b>Zhizhi Yu</b>, Di Jin, Ziyang Liu, Dongxiao He, Xiao Wang, Hanghang Tong, Jiawei Han. 
 			"AS-GCN: Adaptive semantic architecture of graph convolutional networks for text-rich networks".           
-                  <i>ICDM-2021. (CCF B类会议长文，最佳学生论文奖Runner-Up)</i>
+                  <i>ICDM-2021. (CCF B类会议长文，<span style="color: red"
+                  >最佳学生论文奖Runner-Up)</span></i>
                 </p>
               </blockquote>
             </div>
