--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                 <p>
 		  Di Jin, <b>Zhizhi Yu</b>, Pengfei Jiao, Shirui Pan, Dongxiao He, Jia Wu, Philip S. Yu, Weixiong Zhang.
                   "A survey of community detection approaches: From statistical modeling to deep learning". 
-			<i>IEEE Transactions on Knowledge and Data Engineering, 2023.（CCF A类期刊）</i>	
+			<i>IEEE Transactions on Knowledge and Data Engineering (TKDE), 2023.（CCF A类期刊）</i>	
                 </p>
               </blockquote>
             </div>
@@ -433,7 +433,7 @@
                 <p>
 		Di Jin, <b>Zhizhi Yu</b>, Dongxiao He, Carl Yang, Philip S. Yu, Jiawei Han. 
 		"GCN for HIN via implicit utilization of attention and meta-paths". 
-		<i>IEEE Transactions on Knowledge and Data Engineering, 2023.（CCF A类期刊）</i>
+		<i>IEEE Transactions on Knowledge and Data Engineering (TKDE), 2023.（CCF A类期刊）</i>
                 </p>
               </blockquote>
             </div>
@@ -443,7 +443,7 @@
                 <p>
 		 <b>Zhizhi Yu</b>, Di Jin, Ziyang Liu, Dongxiao He, Xiao Wang, Hanghang Tong, Jiawei Han. 
 			"Embedding text-rich graph neural networks with sequence and topical semantic structures". 
-			<i>Knowledge and Information Systems, 2023.（CCF B类期刊）</i>
+			<i>Knowledge and Information Systems (KAIS), 2023.（CCF B类期刊）</i>
                 </p>
               </blockquote>
             </div>
