--- a/index.html
+++ b/index.html
@@ -396,7 +396,16 @@
                 >[DBLP]</a
               >
             </h2>
-		  
+
+<div class="testimonial">
+              <blockquote>
+                <p>
+	           Di Jin, Zhiqiang Wang, Cuiying Huo, <b>Zhizhi Yu*</b>, Dongxiao He, Yuxiao Huang. 
+			"Local-Global Fusion Augmented Graph Contrastive Learning Based on Generative Models".
+			<i>KSEM-2023. (CCF C类会议)</i>
+                </p>
+              </blockquote>
+            </div>
 
             <div class="testimonial">
               <blockquote>
