--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                 <p>
 	           Di Jin, Zhiqiang Wang, Cuiying Huo, <b>Zhizhi Yu*</b>, Dongxiao He, Yuxiao Huang. 
 			"Local-Global Fusion Augmented Graph Contrastive Learning Based on Generative Models".
-			<i>KSEM-2023. (CCF C类会议)</i>
+			<i>KSEM-2023. (CCF C类会议长文)</i>
                 </p>
               </blockquote>
             </div>
