--- a/index.html
+++ b/index.html
@@ -397,6 +397,16 @@
               >
             </h2>
 
+	<div class="testimonial">
+              <blockquote>
+                <p>
+	           Dongxiao He, Shuwei Liu, Meng Ge, <b>Zhizhi Yu*</b>, Guangquan Xu, Zhiyong Feng. 
+			"Improving Distinguishability of Class for Graph Neural Networks".
+			<i>AAAI-2024. (CCF A类会议长文)</i>
+                </p>
+              </blockquote>
+            </div>
+		  
 <div class="testimonial">
               <blockquote>
                 <p>
