--- a/index.html
+++ b/index.html
@@ -400,6 +400,16 @@
 	<div class="testimonial">
               <blockquote>
                 <p>
+	           Yawen Li, <b>Zhizhi Yu*</b>, Dongxiao He. 
+			"Text-Rich Graph Neural Networks with Subjective-Objective Semantic Modeling".
+			<i>IEEE Transactions on Knowledge and Data Engineering (TKDE), 2024.（CCF A类期刊）</i>
+                </p>
+              </blockquote>
+            </div>
+
+	<div class="testimonial">
+              <blockquote>
+                <p>
 	           Dongxiao He, Shuwei Liu, Meng Ge, <b>Zhizhi Yu*</b>, Guangquan Xu, Zhiyong Feng. 
 			"Improving Distinguishability of Class for Graph Neural Networks".
 			<i>AAAI-2024. (CCF A类会议长文)</i>
