--- a/index.html
+++ b/index.html
@@ -400,6 +400,27 @@
 	<div class="testimonial">
               <blockquote>
                 <p>
+	           <b>Zhizhi Yu</b>, Bin Feng, Dongxiao He, Zizhen Wang, Yuxiao Huang, Zhiyong Feng. 
+			"LG-GNN: Local-Global Adaptive Graph Neural Network for Modeling both Homophily and Heterophily".
+			<i>IEEE Transactions on Knowledge and Data Engineering (TKDE), 2024.（CCF A类期刊）</i>
+                </p>
+              </blockquote>
+            </div>
+		  
+	<div class="testimonial">
+              <blockquote>
+                <p>
+	           Yu Zhou, Di Jin, Jianguo Wei, Dongxiao He, <b>Zhizhi Yu*</b>, Weixiong Zhang. 
+			"Generalized Taxonomy-Guided Graph Neural Networks".
+			<i>IEEE Transactions on Knowledge and Data Engineering (TKDE), 2024.（CCF A类期刊）</i>
+                </p>
+              </blockquote>
+            </div>
+
+		  
+	<div class="testimonial">
+              <blockquote>
+                <p>
 	           Yawen Li, <b>Zhizhi Yu*</b>, Dongxiao He. 
 			"Text-Rich Graph Neural Networks with Subjective-Objective Semantic Modeling".
 			<i>IEEE Transactions on Knowledge and Data Engineering (TKDE), 2024.（CCF A类期刊）</i>
