--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                 <p>
 	           <b>Zhizhi Yu</b>, Bin Feng, Dongxiao He, Zizhen Wang, Yuxiao Huang, Zhiyong Feng. 
 			"LG-GNN: Local-Global Adaptive Graph Neural Network for Modeling both Homophily and Heterophily".
-			<i>IEEE Transactions on Knowledge and Data Engineering (TKDE), 2024.（CCF A类期刊）</i>
+			<i>IJCAI-2024.（CCF A类会议长文）</i>
                 </p>
               </blockquote>
             </div>
@@ -412,7 +412,7 @@
                 <p>
 	           Yu Zhou, Di Jin, Jianguo Wei, Dongxiao He, <b>Zhizhi Yu*</b>, Weixiong Zhang. 
 			"Generalized Taxonomy-Guided Graph Neural Networks".
-			<i>IEEE Transactions on Knowledge and Data Engineering (TKDE), 2024.（CCF A类期刊）</i>
+			<i>IJCAI-2024.（CCF A类会议长文）</i>
                 </p>
               </blockquote>
             </div>
