--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                   >Di Jin (金弟)</a
                 >. Her research interests include graph machine learning, graph neural networks, complex
                 network analysis, e-commerce search and recommendation system. She has published many papers in highly
-                regarded journals and conferences, such as NeurIPS, WWW, ICDM,
+                regarded journals and conferences, such as NeurIPS, WWW, ICDM, IJCAI, AAAI,
                 IEEE TNNLS, IEEE TKDE, etc.
 <!-- 		      <br /><br /> -->
 <!--                 <span style="color: red"
